--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "author": "qriousnz",
     "description": "GitHub actions for qriousnz.",
     "license": "MIT",
+    "type": "module",
     "scripts": {
-        "build": "rm -rf lib && node esbuild.mjs"
+        "build": "rm -rf lib && tsc --build && node esbuild.mjs"
     },
     "dependencies": {
         "@actions/core": "^1.10.0",
+        "@actions/github": "^5.1.1",
         "@aws-sdk/abort-controller": "^3.0.0",
         "@aws-sdk/client-s3": "^3.309.0",
         "@aws-sdk/lib-storage": "^3.312.0",
