--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
+    "strict": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "outDir": ".cache/tsbuild",
     "target": "ES2021",
     "module": "node16",
     "moduleResolution": "node16",
-    "outDir": "lib",
-    "strict": true,
-    "declaration": true,
-    "esModuleInterop": true,
-    "removeComments": true,
-    "newLine": "lf",
     "lib": ["ES2021", "DOM"],
     "types": ["node"]
   },
