--- a/s3-archive-upload/action.yml
+++ b/s3-archive-upload/action.yml
@@ -19,4 +19,4 @@ inputs:
     default: "false"
 runs:
   using: node16
-  main: lib/s3-archive-upload/main.mjs
+  main: ../lib/s3-archive-upload/main.mjs
