--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
         "@aws-sdk/abort-controller": "^3.0.0",
+        "@aws-sdk/client-cloudwatch-logs": "^3.321.1",
         "@aws-sdk/client-s3": "^3.309.0",
+        "@aws-sdk/client-ssm": "^3.321.1",
         "@aws-sdk/lib-storage": "^3.312.0",
+        "ansi-styles": "^6.2.1",
         "globby": "^13.1.4",
         "tar": "^6.1.13"
     },
