--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@actions/github": "^5.1.1",
         "@aws-sdk/abort-controller": "^3.0.0",
         "@aws-sdk/client-cloudwatch-logs": "^3.321.1",
+        "@aws-sdk/client-ecr": "^3.321.1",
         "@aws-sdk/client-s3": "^3.309.0",
         "@aws-sdk/client-ssm": "^3.321.1",
         "@aws-sdk/lib-storage": "^3.312.0",
