--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,12 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
-          git commit -am "Merge build output [skip-ci]"
+          git commit \
+            --author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>" \
+            -c user.name="github-actions[bot]" \
+            -c user.email="41898282+github-actions[bot]@users.noreply.github.com" \
+            -m "Merge build output [skip-ci]"
           git push
 
       - name: Create release
