--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,9 +47,8 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
-          git commit \
-            --author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>" \
-            -m "Merge build output [skip-ci]"
+          git commit -m "Merge build output [skip-ci]" \
+            --author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>"
           git push
 
       - name: Create release
