--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
-          git commit -m "Merge build output [skip-ci]" \
+          git commit -m "Merge build output [skip ci]" \
             --author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>"
           git push
 
