--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
+        "lint": "eslint . --cache --cache-location=.cache",
         "build": "rm -rf lib && tsc --build && node esbuild.mjs"
     },
     "dependencies": {
@@ -24,7 +25,11 @@
     "devDependencies": {
         "@types/node": "^18.15.11",
         "@types/tar": "^6.1.4",
+        "@typescript-eslint/eslint-plugin": "^5.59.1",
+        "@typescript-eslint/parser": "^5.59.1",
         "esbuild": "^0.17.15",
+        "eslint": "^8.39.0",
+        "eslint-config-prettier": "^8.8.0",
         "prettier": "^2.8.8",
         "typescript": "^5.0.3"
     },
