--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,13 +10,5 @@
   "parserOptions": {
     "project": true
   },
-  "root": true,
-  "overrides": [
-    {
-      "files": ["**/*.mjs"],
-      "parserOptions": {
-        "project": null
-      }
-    }
-  ]
+  "root": true
 }
