--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "author": "qriousnz",
     "description": "GitHub actions for qriousnz.",
     "license": "MIT",
+    "private": true,
     "type": "module",
     "scripts": {
         "lint": "eslint . --cache --cache-location=.cache",
