--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "qriousnz-actions",
-    "version": "1.0.30",
+    "version": "1.0.31",
     "author": "qriousnz",
     "description": "GitHub actions for qriousnz.",
     "license": "MIT",
@@ -9,7 +9,7 @@
     "scripts": {
         "format": "prettier --write .",
         "format-check": "prettier --check .",
-        "lint": "eslint . --cache --cache-location=.cache",
+        "lint": "eslint --cache --cache-location=.cache/eslint/ .",
         "type-check": "tsc --build",
         "build": "yarn type-check && node esbuild.mjs"
     },
