--- a/package.json
+++ b/package.json
@@ -16,26 +16,28 @@
     "dependencies": {
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
-        "@aws-sdk/abort-controller": "^3.0.0",
+        "@aws-sdk/abort-controller": "^3.310.0",
         "@aws-sdk/client-cloudwatch-logs": "^3.321.1",
         "@aws-sdk/client-ecr": "^3.321.1",
-        "@aws-sdk/client-s3": "^3.309.0",
+        "@aws-sdk/client-s3": "^3.321.1",
         "@aws-sdk/client-ssm": "^3.321.1",
-        "@aws-sdk/lib-storage": "^3.312.0",
+        "@aws-sdk/lib-storage": "^3.321.1",
         "ansi-styles": "^6.2.1",
         "globby": "^13.1.4",
         "tar": "^6.1.13"
     },
     "devDependencies": {
-        "@types/node": "^18.15.11",
+        "@types/node": "^18.16.3",
         "@types/tar": "^6.1.4",
         "@typescript-eslint/eslint-plugin": "^5.59.1",
         "@typescript-eslint/parser": "^5.59.1",
-        "esbuild": "^0.17.15",
+        "esbuild": "^0.17.18",
         "eslint": "^8.39.0",
         "eslint-config-prettier": "^8.8.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
-        "typescript": "^5.0.3"
+        "typescript": "^5.0.4"
     },
     "packageManager": "yarn@3.5.0"
 }
